--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,3 @@
-:root {}
-
 /* App Styles */
 .App {
   height: auto;
@@ -44,7 +42,7 @@ body {
 .SidebarList .row:hover {
   cursor: pointer;
   background-color: rgb(59, 61, 67);
-  font-size: 23px;
+  font-size: 200%;
 }
 
 .SidebarList #active {
@@ -140,7 +138,7 @@ input[type="submit"]:hover {
 }
 
 #seasons-sum img:hover {
-  width: 310px;
+  width: 300%;
 }
 
 /* Game Sections Styles */
@@ -171,7 +169,7 @@ input[type="submit"]:hover {
 #ultimate-goal:hover,
 #freight-frenzy:hover,
 #powerplay:hover {
-  font-size: 22px;
+  font-size: 105%;
   filter: brightness(110%);
 }
 
@@ -278,8 +276,13 @@ a:hover {
 
 @media only screen and (max-width: 768px) {
   body {
-    font-size: 30px;
+    width: 100%;
+    height: 100%;
+    margin: 0;
     overflow-x: hidden;
+    position: absolute;
+    top: 0;
+    left: 0;
   }
 
   /* Adjustments for smaller screens */
@@ -320,7 +323,7 @@ a:hover {
     width: 90%;
     margin-left: 5%;
     padding-left: 5%;
-    margin-top: 120px;
+    margin-top: 310px;
   }
 
   /* Seasons Section Styles */
@@ -328,6 +331,7 @@ a:hover {
     width: 100%;
     padding-right: 0;
     float: none;
+    transition: all 0.3s ease;
   }
 
   /* Game Sections Styles */
@@ -368,6 +372,11 @@ a:hover {
   }
 
   .Sidebar {
-    margin-bottom: 30px;
+    margin-bottom: 110px;
   }
+
+  img {
+    margin-left:-10px;
+  }
+  #skystone img:hover{}
 }
