--- a/src/App.css
+++ b/src/App.css
@@ -280,6 +280,35 @@ a:hover {
   background: rgb(93, 100, 75);
 }
 
+#sponsors-container {
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+  gap: 16px;
+  align-items: center;
+  justify-content: center;
+}
+
+.sponsor {
+  text-align: center;
+}
+
+.sponsor a img {
+  max-width: 130%;
+  height: auto;
+  display: inline-block;
+}
+
+#sponsors-container img {
+  width: 70%;
+  transition: all ease 0.3s;
+  margin:5px;
+}
+#sponsors-container{
+  margin: 5px;
+}
+#sponsors-container img:hover{
+  width: 72%;
+}
 @media only screen and (max-width: 768px) {
   body {
     width: 100%;
@@ -290,7 +319,11 @@ a:hover {
     top: 0;
     left: 0;
   }
-
+  #sponsors-container img {
+    width: 90%;
+    transition: all ease 0.3s;
+    margin:5px;
+  }
   /* Adjustments for smaller screens */
 
   /* Sidebar Styles */
