--- a/src/App.css
+++ b/src/App.css
@@ -167,13 +167,15 @@ input[type="submit"]:hover {
 #contactForm,
 #robots-div,
 .textarea {
+  margin-top: 1%;
+  margin-left: 1%;
   text-align: left;
   color: white;
   font-size: 20px;
   position: absolute;
   top: 12%;
   margin-left: 15%;
-  max-width: 1000px;
+  max-width: 83%;
   font-weight: bolder;
   background-color: rgb(106, 111, 90);
   border: 3px solid black;
@@ -288,13 +290,15 @@ a:hover {
 
 /* Header Links Styles */
 #header-links {
-  padding-left: 900px;
-  padding-right: -30px;
+  padding-left: 55%;
 }
 
 .header-link {
-  size: 20px;
-  margin-left: 5px;
+  margin-top: 2%;
+  float: left;
+  font-size: 200%;
+  size: 30%;
+  margin-left: 0.5%;
   color: rgb(51, 51, 51);
 }
 
@@ -402,6 +406,10 @@ a:hover {
     width: 100vw;
   }
 
+  .sponsor {
+    filter: none;
+  }
+
   /* Header Styles */
   .header {
     width: 100vw;
@@ -413,7 +421,7 @@ a:hover {
 
   #contactForm input,
   #contactForm textarea {
-    font-size: 30px;
+    font-size: 70%;
     margin-left: -20px;
   }
 
@@ -430,7 +438,7 @@ a:hover {
   #contactForm,
   #robots-div,
   .textarea {
-    width: 90%;
+    width: 100%;
     margin-left: 5%;
     padding-left: 5%;
     margin-top: 360px;
@@ -450,7 +458,6 @@ a:hover {
   #freight-frenzy,
   #powerplay {
     font-size: 30px;
-    /* Adjust font size for smaller screens */
   }
 
   /* Header Links Styles */
@@ -507,4 +514,35 @@ a:hover {
   .robot-img:hover {}
 
   #skystone img:hover {}
+}
+
+.footer {
+  color: rgb(43, 39, 39);
+  margin-top: 70px;
+  margin-right: 13px;
+  background-color: #bdb4b4;
+}
+
+#contactForm #maillink {
+  color: white;
+  text-decoration: none;
+}
+
+#contactForm #maillink:hover {
+  color: white;
+  text-decoration: none;
+}
+
+.footer i {
+  padding-left: 10px;
+}
+
+.footer #maillink {
+  color: rgb(43, 39, 39);
+  text-decoration: none;
+}
+
+.footer #maillink:hover {
+  color: rgb(43, 39, 39);
+  text-decoration: none;
 }
