--- a/src/App.css
+++ b/src/App.css
@@ -58,24 +58,18 @@ body {
 /* Sidebar Styles */
 .Sidebar {
   height: 100%;
-  width: 200px;
+  width: 0%;
   background-color: rgb(44, 46, 51);
+  border-radius: 5px;
+  opacity: 0%;
+  transition: width 0.3s ease, opacity 0.3s ease;
 }
 
 .SidebarList {
+  animation: showSidebarList 0.3s forwards;
   height: 100%;
   padding: 0;
   width: 100%;
-}
-
-#fixed-footer {
-  display: none;
-  position: fixed;
-  width: 100vw;
-  height: 20px;
-  background-color: rgb(83, 86, 71);
-  border: solid 1px black;
-  bottom: 0;
 }
 
 .SidebarList .row {
@@ -89,7 +83,8 @@ body {
   align-items: center;
   font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
   transition: background-color 0.3s ease, font-size 0.3s ease;
-  font-size: 20px;
+  font-size: 0px;
+  user-select: none;
 }
 
 .SidebarList .row:hover {
@@ -107,10 +102,12 @@ body {
 
 #header-logo {
   filter: drop-shadow(0 0 0.75rem rgb(37, 35, 35));
+  user-select: none;
 }
 
 #header-text {
   text-shadow: 1px 1.5px 0px #1c1616;
+  user-select: none;
 }
 
 .SidebarList #active {
@@ -431,6 +428,41 @@ a:hover {
   filter: drop-shadow(15px 10px 4px rgb(77, 80, 66));
 }
 
+.hamburger-menu-button {
+  background-color: transparent;
+  border: none;
+  font-size: 45px;
+  padding: 5px;
+  transition: color 0.3s ease;
+}
+
+.hamburger-menu-button:hover {
+  font-size: 45px;
+  color: rgb(77, 70, 70);
+  cursor: var(--cursorPointer);
+}
+
+.Sidebar.active {
+  opacity: 100%;
+  width: 200px;
+  transition: width 0.3s ease, opacity 0.3s ease;
+}
+
+.Sidebar.active .SidebarList .row {
+  max-width: 100%;
+  height: 50px;
+  list-style-type: none;
+  margin: 0;
+  display: flex;
+  color: white;
+  justify-content: center;
+  align-items: center;
+  font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+  transition: background-color 0.3s ease, font-size 0.3s ease;
+  font-size: 20px;
+  user-select: none;
+}
+
 @media only screen and (max-width: 768px) {
   body {
     width: 100%;
@@ -489,8 +521,9 @@ a:hover {
   .textarea {
     width: 100vw;
     margin-left: 1%;
-    margin-top: 360px;
+    margin-top: 60px;
     max-width: 98vw;
+    transition: margin-top 0.3s ease;
   }
 
   /* Seasons Section Styles */
@@ -561,6 +594,13 @@ a:hover {
     margin-bottom: 110px;
   }
 
+  .Sidebar.active {
+    opacity: 100%;
+    width: 100vw;
+    transition: width 0.3s ease, opacity 0.3s ease;
+    margin-bottom: 100px;
+  }
+
   img {
     margin-left: -10px;
   }
@@ -582,10 +622,6 @@ a:hover {
   .robot-sum-text,
   #about-text {
     font-size: 23px;
-  }
-
-  #fixed-footer {
-    display: none;
   }
 }
 
